--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,28 @@
-body {
+header {
+  height: 50px;
+  width: 100%;
+  background-color: #fda8a8;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.left {
+  margin-left: 0px;
+}
+
+.right {
+  margin-right: 0px;
+}
+
+.right a {
+  margin-left: 0px;
+  margin-right: 00px;
+}
+
+
+
+main {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
@@ -6,7 +30,7 @@ body {
     align-items: center;
   }
   
-  div {
+.main {
     margin: 20px;
     padding: 20px;
     border: 1px solid #ccc;
@@ -38,17 +62,19 @@ body {
     margin: 10px 0;
   }
   
-  a {
+  a , input , button {
     color: #333;
     text-decoration: none;
     border: 1px solid #333;
     padding: 5px 10px;
     border-radius: 5px;
     margin: 10px 0;
+    background-color: #ffffff;
   }
   
-  a:hover {
+  a:hover , input:hover ,button:hover {
     background-color: #333;
     color: #fff;
   }
+  
   
