--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -62,10 +62,28 @@ ul > li > a{
     box-shadow: 0px 2px 4px -0.7px rgba(0,0,0,0.25);
 }
 
+
+.log-in{
+    margin: 30px auto;
+    text-align: center;
+}
 .log-in > a{
     color: rgb(128, 128, 128);
 }
 
 a:hover{
+    color: black;
+}
+
+.log-out{
+    margin: 30px auto;
+    text-align: center;
+}
+
+.log-out > a{
+    color: rgb(128, 128, 128);
+}
+
+.log-out > a:hover{
     color: black;
 }
