--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,23 +1,42 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+
 header {
   height: 50px;
   width: 100%;
-  background-color: #fda8a8;
+  background: #4798bb;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
 .left {
-  margin-left: 0px;
+  margin-left: 90px;
+}
+
+.left > a{
+  text-decoration: none;
+  color: white;
+}
+
+.left > a:hover{
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .right {
-  margin-right: 0px;
+  margin-right: 90px;
 }
 
-.right a {
-  margin-left: 0px;
-  margin-right: 00px;
+.right > a{
+  text-decoration: none;
+  color: white;
+}
+
+.right > a:hover{
+  color: rgba(0, 0, 0, 0.6);
 }
 /* ここまでヘッダーに対応してる部分 */
 
@@ -64,7 +83,7 @@ main {
     margin: 10px 0;
   }
   
-  a , input , button {
+  /* a , input , button {
     color: #333;
     text-decoration: none;
     border: 1px solid #333;
@@ -73,10 +92,10 @@ main {
     margin: 10px 0;
     background-color: #ffffff;
   }
-  
   a:hover , input:hover ,button:hover {
     background-color: #333;
     color: #fff;
-  }
+  } */
+
   
   
