--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -1,28 +1,37 @@
-body{
-    background-color: #f5f5f5;
-}
-
 header {
     height: 50px;
     width: 100%;
-    background-color: #f5f5f5;
+    background: #4798bb;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.05);
   }
-
+  
   .left {
-    margin-left: 0px;
+    margin-left: 90px;
+  }
+  
+  .left > a{
+    text-decoration: none;
+    color: white;
+  }
+  
+  .left > a:hover{
+    color: rgba(0, 0, 0, 0.6);
   }
   
   .right {
-    margin-right: 0px;
+    margin-right: 90px;
   }
   
-  .right a {
-    margin-left: 0px;
-    margin-right: 00px;
+  .right > a{
+    text-decoration: none;
+    color: white;
+    margin: 10px;
+  }
+  
+  .right > a:hover{
+    color: rgba(0, 0, 0, 0.6);
   }
 
   main {
@@ -65,7 +74,7 @@ header {
     margin: 10px 0;
   }
   
-  a , input , button {
+  /* a , input , button {
     color: #333;
     text-decoration: none;
     border: 1px solid #333;
@@ -74,8 +83,7 @@ header {
     margin: 10px 0;
     background-color: #ffffff;
   }
-  
   a:hover , input:hover ,button:hover {
     background-color: #333;
     color: #fff;
-  }
+  } */
