--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -74,6 +74,30 @@ header {
     margin: 10px 0;
   }
   
+  .box{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
+    max-width: 600px;
+    width: 100%;
+  }
+
+  .button{
+    display: flex;
+    flex-direction: row;
+  }
+
+.button > input:hover, button:hover, a:hover{
+    background-color: #4798bb;
+    color: #fff;
+  }
+
   /* a , input , button {
     color: #333;
     text-decoration: none;
