--- a/public/css/create.css
+++ b/public/css/create.css
@@ -44,6 +44,26 @@ body {
   .right > a:hover{
     color: rgba(0, 0, 0, 0.6);
   }
+
+  main {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .main {
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    max-width: 600px;
+    width: 100%;
+    text-align: center;
+    margin:  20px auto;
+  }
   
 form {
     max-width: 600px; /* フォームの最大幅を指定 */
