--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,43 +1,46 @@
 * {
-    margin: 0;
     padding: 0;
-}
-
-#header{
-    position: fixed;
-    top: 0;
+    margin: 0;
+  }
+  
+  header {
+    height: 50px;
     width: 100%;
-    padding: 0.5rem 1rem;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.05);
-    background-color: #fff;
-}
-
-.container{
-    display:flex;
-    flex-direction:row;
-    flex-wrap:wrap;
-    align-content:normal;
-    justify-content:space-between;
-    align-items:center;
-    padding: 0.5rem 4rem;
-}
+    background: #4798bb;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .left {
+    margin-left: 90px;
+  }
+  
+  .left > a{
+    text-decoration: none;
+    color: white;
+  }
+  
+  .left > a:hover{
+    color: rgba(0, 0, 0, 0.6);
+  }
+  
+  .right {
+    margin-right: 90px;
+  }
+  
+  .right > a{
+    text-decoration: none;
+    color: white;
+    margin: 10px;
+  }
+  
+  .right > a:hover{
+    color: rgba(0, 0, 0, 0.6);
+  }
 
 a{
-    color: black;
     text-decoration: none;
-}
-
-ul{
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
-}
-
-ul > li > a{
-    padding: 1rem ;
-    color: rgb(128, 128, 128);
 }
 
 .top {
