--- a/public/css/comment.index.css
+++ b/public/css/comment.index.css
@@ -47,17 +47,17 @@
   color: rgba(0, 0, 0, 0.6);
 } */
 
-div {
-  /* margin: 20px;
-  padding: 20px; */
-  /* border: 1px solid #ccc;
+/* div {
+  margin: 20px;
+  padding: 20px; 
+  border: 1px solid #ccc; 
   border-radius: 5px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   max-width: 600px;
   width: 100%;
-  text-align: center; */
-}
+  text-align: center;
+} */
 
 h1 {
   color: #333;
