--- a/public/css/comment.index.css
+++ b/public/css/comment.index.css
@@ -164,3 +164,20 @@ img {
 .title{
   color: #000000;
 }
+
+.button {
+  text-decoration: none;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #333;
+  padding: 5px 10px;
+  border-radius: 5px;
+  margin: 10px 0;
+  background-color: #ffffff;
+}
+
+.button:hover{
+  background-color: #4798bb;
+  color: #fff;
+}
+
